--- a/austenhenry/.forestry/settings.yml
+++ b/austenhenry/.forestry/settings.yml
@@ -7,14 +7,14 @@ sections:
 - type: heading
   label: Author
 - type: directory
-  path: exampleSite/content/author
+  path: austenhenry/content/author
   label: Authors
   create: documents
   match: "**/*"
 - type: heading
   label: Blog Post
 - type: directory
-  path: exampleSite/content/post
+  path: austenhenry/content/post
   label: Post
   create: documents
   match: "**/*"
@@ -23,23 +23,23 @@ sections:
 - type: heading
   label: Others Page
 - type: document
-  path: exampleSite/content/about/_index.md
+  path: austenhenry/content/about/_index.md
   label: About
 - type: document
-  path: exampleSite/content/contact/_index.md
+  path: austenhenry/content/contact/_index.md
   label: Contact
 - type: document
-  path: exampleSite/content/privacy-policy/_index.md
+  path: austenhenry/content/privacy-policy/_index.md
   label: Privacy Policy
 - type: heading
   label: Configuration
 - type: directory
-  path: exampleSite
+  path: austenhenry
   label: Configuration
   create: all
   match: "*.toml"
   new_doc_ext: toml
-upload_dir: exampleSite/static/images
+upload_dir: austenhenry/static/images
 public_path: "/images"
 front_matter_path: ''
 use_front_matter_path: false
